--- a/templates/attendance/dashboard.html
+++ b/templates/attendance/dashboard.html
@@ -106,7 +106,7 @@
                                         <small class="text-muted">{{ sabha.date }} at {{ sabha.location }}</small>
                                     </div>
                                     <a href="{% url 'mark_attendance' sabha.id %}" class="btn btn-sm btn-temple">
-                                        <i class="bi bi-check-circle"></i> <span class="d-none d-sm-inline">Mark</span>
+                                        <i class="bi bi-check-circle me-2"></i> <span class="d-none d-sm-inline">Mark</span>
                                     </a>
                                 </div>
                             </div>
