--- a/templates/attendance/dashboard.html
+++ b/templates/attendance/dashboard.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!-- Hero Section -->
 <div class="hero-bg py-5 mb-5">
-    <div class="container" data-aos="fade-up">
+    <div class="container-fluid px-3" data-aos="fade-up">
         <div class="row align-items-center">
             <div class="col-lg-8">
                 <h1 class="display-1 mb-4">Temple Attendance<br><span style="background: var(--gradient-primary); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Made Simple</span></h1>
@@ -24,7 +24,7 @@
 </div>
 
 <!-- Stats Cards -->
-<div class="container mb-5">
+<div class="container-fluid px-3 mb-5">
     <div class="row g-4">
         <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="card stat-card h-100">
@@ -89,6 +89,7 @@
     </div>
 </div>
 
+<div class="container-fluid px-3">
 <div class="row">
     <div class="col-12 col-lg-6 mb-4" data-aos="fade-right">
         <div class="card h-100">
@@ -145,6 +146,9 @@
     </div>
 </div>
 
+</div>
+
+<div class="container-fluid px-3">
 <div class="row" data-aos="fade-up">
     <div class="col-12">
         <div class="card">
@@ -181,5 +185,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
